[package]
name = "symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha3 = "0.10.8"
# binascii = "0.1.4"
data-encoding = "2.4.0"
regex = "1.10.2"
ed25519-dalek = "2"
hex-literal = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
